hphp/hack/test/typecheck/akempty/akempty_promotion_10.php.exp
File "akempty_promotion_10.php", line 8, characters 3-18:
Invalid assignment (Typing[4110])
File "akempty_promotion_10.php", line 7, characters 17-23:
This is an empty array
File "akempty_promotion_10.php", line 7, characters 17-23:
It is incompatible with a varray_or_darray
